--- a/.github/workflows/python_license_checker.yml
+++ b/.github/workflows/python_license_checker.yml
@@ -18,6 +18,6 @@ jobs:
         with:
           python-version: 3.11.1
       - name: Install dependencies
-        run: python -m pip install urllib3 && python -m pip install -r requirements.txt --no-cache-dir
+        run: python -m pip install urllib3 -r requirements.txt --no-cache-dir
       - name: Check license
         run: python .github/workflows/license_checker_v2.py --dependencies $(cut -d '=' -f 1 <<< $(pip freeze))
