--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -18,15 +18,15 @@ jobs:
         python-version: ["3.7", "3.8", "3.9", "3.10", "3.11", "3.12", "3.13"]
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install flake8 pytest
+          python -m pip install flake8
           if [ -f requirements.txt ]; then
             pip install -r requirements.txt
           fi
@@ -40,6 +40,17 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
+      - name: Set up Python 3.13
+        uses: actions/setup-python@v5
+        with:
+          python-version: 3.13
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install flake8 pytest
+          if [ -f requirements.txt ]; then
+            pip install -r requirements.txt
+          fi
       - name: Test with pytest
         run: |
           pytest
